# lightkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yaml  deploy.yml  docs.yaml  docs.yml  style.yaml
docs/: conf.py  index.rst  spelling_wordlist.txt
docs/_templates/autosummary/: function.rst
docs/sites/: api.rst
lightkit/: __init__.py
lightkit/data/: __init__.py  _protocols.py  collation.py  factory.py  loader.py  sampler.py  types.py
lightkit/estimator/: __init__.py  _protocols.py  _trainer.py  base.py  configurable.py  mixins.py  utils.py
lightkit/nn/: __init__.py  _protocols.py  configurable.py
lightkit/utils/: __init__.py  generics.py  path.py
tests/data/: test_sampler.py
tests/nn/: test_configurable.py
