[tool.poetry]
authors = ["Oliver Borchert <me@borchero.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Utilities for PyTorch and PyTorch Lightning."
documentation = "https://lightkit.borchero.com"
license = "MIT"
name = "lightkit"
readme = "README.md"
repository = "https://github.com/borchero/lightkit"
version = "0.0.0"

[tool.poetry.dependencies]
numpy = "^1.20.0"
python = ">=3.8,<=3.11"
pytorch-lightning = "<=2.1.3"
torch = "<2.2.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.2"
black = "^21.12b0"
isort = "^5.10.1"
pydata-sphinx-theme = "^0.7.2"
pylint = "^2.12.2"
pytest = "^6.2.5"
scanpydoc = "^0.7.3"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-automodapi = "^0.13"
sphinx-copybutton = "^0.4.0"
sphinxcontrib-spelling = "^7.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.messages_control]
disable = [
  "arguments-differ",
  "duplicate-code",
  "missing-module-docstring",
  "invalid-name",
  "no-self-use",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-instance-attributes",
]

[tool.pylint.typecheck]
generated-members = [
  "torch.*",
]

[tool.pyright]
reportIncompatibleMethodOverride = false
reportPrivateImportUsage = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
typeCheckingMode = "strict"

[tool.black]
line-length = 99

[tool.isort]
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
known_first_party = "lightkit"
line_length = 99
lines_between_sections = 0
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
filterwarnings = [
  'ignore:.*Create unlinked descriptors is going to go away.*:DeprecationWarning',
]
